<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="42dp"
        android:layout_marginTop="148dp"
        android:text="@string/rate_our_food"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RatingRadioGroup"
        android:layout_width="405dp"
        android:layout_height="264dp"
        android:layout_marginTop="20dp"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/excellentRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excellent" />

        <RadioButton
            android:id="@+id/vgoodRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_good" />

        <RadioButton

            android:id="@+id/goodRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/satisfactoryRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satisfactory" />

        <RadioButton
            android:id="@+id/poorRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poor" />

    </RadioGroup>

    <Button
        android:id="@+id/cancelBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RatingRadioGroup"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/submitBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelBT"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RatingRadioGroup"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

